Translations work, fixed couple of minor bugs with times and dates

--- a/org/troikalearning/troikalearning/templates/about.html
+++ b/org/troikalearning/troikalearning/templates/about.html
@@ -86,7 +86,7 @@
         </div>
         <p>
           <ol>
-            <li><a href="{{ url_for('login') }}" target="_blank">Register</a> as a user.</li>
+            <li><a href="{{ url_for('login') }}" target="_blank">{{ _('Register') }}</a> {{ _('as a user.') }}</li>
             <li>{{ _('Find a topic you wish to teach, share or present, or a topic you want to learn about 
 		from someone else.') }}</li>
             <li><a href="{{ url_for('create_troika') }}" target="_blank">{{ _('Create') }}</a> 
