--- a/org/troikalearning/troikalearning/templates/troika.html
+++ b/org/troikalearning/troikalearning/templates/troika.html
@@ -35,6 +35,7 @@
         <h3>{{ _('Start time') }}</h3> {{ troika.start_time }}
         <h3>{{ _('End time') }}</h3> {{ troika.end_time }}
         <h3>{{ _('Address') }}</h3> {{ troika.address }} - {{ troika.address_addendum }}
+        <h3>{{ _('Language') }}</h3> {{ troika.language }}
       </div>
     </div>
     <div class="span4 tl-group">
