--- a/org/troikalearning/troikalearning/templates/edit_troika.html
+++ b/org/troikalearning/troikalearning/templates/edit_troika.html
@@ -14,10 +14,10 @@
       <form id="tl-troika" action="" method="POST">
         {% if access == 'create' %}
             {{ _('When you fill up this form you will become a
-            creator for a new pending troika. The troika will
+            creator for a new pending Troika. The Troika will
             become active once two other participants have
             confirmed their attendance and you have agreed
-            on time and place of the troika.') }}
+            on time and place of the Troika.') }}
         {% endif %}  
         <dl>
           <dt>{{ troikaform.hidden_tag() }}</dt>
