--- a/org/troikalearning/troikalearning/templates/troikas.html
+++ b/org/troikalearning/troikalearning/templates/troikas.html
@@ -9,7 +9,7 @@
 
 {% call macros.heading() %} {% endcall %}
 <div class="pagination-centered">
-  <a href="{{ url_for('create_troika') }}"><h4>{{ _('Create a new troika event') }}</h4></a>
+  <a href="{{ url_for('create_troika') }}"><h4>{{ _('Create a new Troika event') }}</h4></a>
 </div>
 <div class="container-fluid">
   <div class="row-fluid">
@@ -21,7 +21,7 @@
               <a href="#tl-active-collapse" data-toggle="collapse" data-parent="#tl-active-accordion">
               <h3>{{ _('Active Troikas') }}</h3>
               </a>
-              <h6>{{ _('Upcoming troikas you can join.') }}</h6> 
+              <h6>{{ _('Upcoming Troikas you can join.') }}</h6> 
             </div>
           </div>
           <div id="tl-active-collapse" class="accordion-body collapse in">
@@ -52,7 +52,7 @@
               <a data-toggle="collapse" data-parent="#tl-pending-accordion" href="#tl-pending-collapse">
               <h3>{{ _('Pending Troikas') }}</h3>
               </a>
-              <h6>{{ _('Suggested troikas not yet activated. Check if you can help!') }}</h6> 
+              <h6>{{ _('Suggested Troikas not yet activated. Check if you can help!') }}</h6> 
             </div>
           </div>
           <div id="tl-pending-collapse" class="accordion-body collapse in">
@@ -85,7 +85,7 @@
               <a data-toggle="collapse" data-parent="#tl-completed-accordion" href="#tl-completed-collapse">
                 <h3>{{ _('Completed Troikas') }}</h3>
               </a>
-              <h6>{{ _('Succesfully held troikas.') }}</h6> 
+              <h6>{{ _('Succesfully held Troikas.') }}</h6> 
             </div>
           </div>
           <div id="tl-completed-collapse" class="accordion-body collapse">
