--- a/org/troikalearning/troikalearning/templates/about.html
+++ b/org/troikalearning/troikalearning/templates/about.html
@@ -12,7 +12,7 @@
     <div class="span4 tl-group">
       <ul class="nav nav-list" data-spy="scroll" data-target=".nav">
         <li class="nav-header">{{ _('Contents') }}</li>
-        <li><a href="#general">{{ _('What is Troika?') }}</a></li>
+        <li><a href="#general">{{ _('What Is Troika?') }}</a></li>
         <li><a href="#how">{{ _('How Does It Work?') }}</a></li>
         <li><a href="#we">{{ _('Who are we?') }}</a></li>
         <li><a href="#contact">{{ _('Contact us') }}</a></li>
@@ -74,7 +74,7 @@
           {{ _('here') }}</a>.
         </p>
         <p>{{ _('Development of Troika is supported by') }} 
-           <a href="http://www.verkostoanatomia.fi/" target="_blank">Verkostoanatomia</a> {{ _('ja') }}
+           <a href="http://www.verkostoanatomia.fi/" target="_blank">Verkostoanatomia</a> {{ _('and') }}
            <a href="http://www.filosofianakatemia.fi/" target="_blank">Filosofian Akatemia</a>. 
         </p>
       </section>
