--- a/org/troikalearning/troikalearning/templates/edit_troika.html
+++ b/org/troikalearning/troikalearning/templates/edit_troika.html
@@ -16,8 +16,10 @@
             {{ _('When you fill up this form you will become a
             creator for a new pending Troika. The Troika will
             become active once two other participants have
-            confirmed their attendance and you have agreed
-            on time and place of the Troika.') }}
+            confirmed their attendance, you have agreed
+            on time and place of the Troika, and either Troika
+            is activated automatically or "Activate Troika" 
+            has been clicked.') }}
         {% endif %}  
         <dl>
           <dt>{{ troikaform.hidden_tag() }}</dt>
