--- a/org/troikalearning/troikalearning/templates/troika.html
+++ b/org/troikalearning/troikalearning/templates/troika.html
@@ -19,7 +19,7 @@
 </div>
 {% elif 'email' in session and troika.is_full and not troika.phase == 'complete' %}
 <div class="pagination-centered">
-  <h5>{{ _('This Troika is currently full.') }}</h5></a>
+  <h5>{{ _('This Troika is currently full') }}</h5></a>
 </div>
 {% endif %}
 <div class="container-fluid">
