Small corrections to translations

--- a/org/troikalearning/troikalearning/templates/troika.html
+++ b/org/troikalearning/troikalearning/templates/troika.html
@@ -122,7 +122,7 @@
 </div>
 {% if troika.activate %}
 <div class="pagination-centered">
-  <a href="{{ url_for('activate_troika', troika_id=troika.id) }}"><h4>Activate Troika</h4></a>
+  <a href="{{ url_for('activate_troika', troika_id=troika.id) }}"><h4>{{ _('Activate Troika') }}</h4></a>
 </div>
 {% endif %}
        
