--- a/org/troikalearning/troikalearning/templates/user.html
+++ b/org/troikalearning/troikalearning/templates/user.html
@@ -3,13 +3,13 @@
 {% block back_button %}
 <a href="/">{{ _('Home') }}</a>
 {% endblock %} 
-{% block subheading %} | {{ _('User') }}{% endblock %}
+{% block subheading %} | {{ _('User Information') }}{% endblock %}
 
 {% block body %}
 <div class="container">
   <div class="row-fluid"> 
     <div class="span8 offset4">  
-      <h2>{{ _('User information') }}</h2>
+      <h2>{{ _('User Information') }}</h2>
       {% call macros.handle_errors(errors=usererrors) %} {% endcall %}
       <form id="tl-user" action="{{ url_for('user') }}" method="POST">
         <dl>
