--- a/org/troikalearning/troikalearning/static/css/tl.less
+++ b/org/troikalearning/troikalearning/static/css/tl.less
@@ -16,8 +16,8 @@ body {
   margin-bottom: 1em;
 }
 
-.tl-language{
-  margin-left: 1em;
+#tl-login, #tl-logout{
+  margin-right: 1em;
 }
 
 .tl-language, .tl-language dl {
@@ -38,8 +38,6 @@ body {
 .tl-list span{
   font-weight: normal;
 }
-
-
 
 .tl-group{
   border: 1px solid #E5E5E5;
@@ -63,6 +61,9 @@ body {
 @media (max-width : 979px) {
   body {
     padding-top: 0px;
+  }
+  .nav-collapse ul li a {
+    color: #EEEEEE !important;
   }
 }
 
