--- a/org/troikalearning/troikalearning/static/css/tl.less
+++ b/org/troikalearning/troikalearning/static/css/tl.less
@@ -65,6 +65,10 @@ body {
   .nav-collapse ul li a {
     color: #EEEEEE !important;
   }
+  .tl-heading{
+    font-size: 12px;
+    padding-bottom: 1em;
+  }
 }
 
 .tl-integer {
