--- a/org/troikalearning/troikalearning/static/css/tl.less
+++ b/org/troikalearning/troikalearning/static/css/tl.less
@@ -56,6 +56,17 @@ body {
     padding-top: 3em;
     padding-bottom: 2em;
   }
+  #tl-troika {
+  	input, textarea {
+  	  width: 30em;
+  	}
+  	.tl-integer {
+  	  width: 2em;
+  	}
+  	input[type=submit], select {
+  	  width: auto;
+  	}
+  }
 }
 
 @media (max-width : 979px) {
@@ -69,6 +80,17 @@ body {
     font-size: 12px;
     padding-bottom: 1em;
   }
+}
+
+.tl-date{
+  width: 7em !important;
+}
+
+.tl-clear {
+  float: inherit;
+  position: absolute;
+  margin-top: 4px;
+  margin-left: -20px;
 }
 
 .tl-integer {
