--- a/org/troikalearning/troikalearning/templates/troikas.html
+++ b/org/troikalearning/troikalearning/templates/troikas.html
@@ -88,7 +88,7 @@
               <h6>{{ _('Succesfully held Troikas.') }}</h6> 
             </div>
           </div>
-          <div id="tl-completed-collapse" class="accordion-body collapse">
+          <div id="tl-completed-collapse" class="accordion-body collapse in">
             <div class="accordion-inner">
               <ul class="tl-troika-headers">
                 {% for completed_entry in completed_entries %}
