--- a/org/troikalearning/troikalearning/templates/troika.html
+++ b/org/troikalearning/troikalearning/templates/troika.html
@@ -51,7 +51,7 @@
           {% endcall %}          
         {% else %}
           {{ troika.lead }}
-          {% if (troika.phase not in ['active', 'complete'] and troika.participating == 'lead') %}
+          {% if (troika.phase not in [_('Active'), _('Complete')] and troika.participating == 'lead') %}
             <a href="{{ url_for('leave_troika', troika_id=troika.id, troika_role=0) }}">
             {{ _('Leave this Troika') }}
             </a>
@@ -68,7 +68,7 @@
           {% endcall %}
         {% else %}
           {{ troika.first_learner }}
-          {% if (troika.phase not in ['active', 'complete'] and troika.participating == 'first_learner') %}
+          {% if (troika.phase not in [_('Active'), _('Complete')] and troika.participating == 'first_learner') %}
             <a href="{{ url_for('leave_troika', troika_id=troika.id, troika_role=1) }}">
             {{ _('Leave this Troika') }}
             </a>
@@ -85,7 +85,7 @@
           {% endcall %}
         {% else %}
           {{ troika.second_learner }}
-          {% if (troika.phase not in ['active', 'complete'] and troika.participating == 'second_learner') %}
+          {% if (troika.phase not in [_('Active'), _('Complete')] and troika.participating == 'second_learner') %}
             <a href="{{ url_for('leave_troika', troika_id=troika.id, troika_role=2) }}">
             {{ _('Leave this Troika') }}
             </a>
@@ -101,16 +101,16 @@
             {% endif %}
             {% else %} {{ _('No one yet') }}
           {%endfor %}
-          {% if (troika.phase == 'active' and 'email' in session and not troika.participating and not troika.is_full) %}
+          {% if (troika.phase == _('Active') and 'email' in session and not troika.participating and not troika.is_full) %}
             <br/><a href="{{ url_for('join_troika', troika_id=troika.id, troika_role=3) }}">
             {{ _('Participate in this Troika') }}
             </a>
-          {% elif (troika.phase != 'complete' and troika.participating == 'participant') %}
+          {% elif (troika.phase !=  _('Complete') and troika.participating == 'participant') %}
             <br/><a href="{{ url_for('leave_troika', troika_id=troika.id, troika_role=3) }}">
             {{ _('Leave this Troika') }}
             </a>
           {% endif %}
-          {% if (troika.phase == 'active' and not troika.is_full) %}  
+          {% if (troika.phase ==  _('Active') and not troika.is_full) %}  
             <br/>{% call macros.invite_modal(inviteform=inviteform_participant, 
                                         link_text=_('Invite participant'), 
                                         heading_text=_('Give the email address of a person you want to invite to be participate in this Troika.')) %}
