--- a/org/troikalearning/troikalearning/templates/troika.html
+++ b/org/troikalearning/troikalearning/templates/troika.html
@@ -22,6 +22,7 @@
   <h5>{{ _('This Troika is currently full') }}</h5></a>
 </div>
 {% endif %}
+
 <div class="container-fluid">
   <div class="row-fluid">
     <div class="span4 tl-group">
@@ -31,7 +32,16 @@
     </div>
     <div class="span4 tl-group">
       <div class="container span12">
-        <h3>{{ _('Status') }}</h3> {{ troika.phase }}
+        <h3>{{ _('Status') }}</h3> 
+        {% if troika.phase == 'active' %}
+          {{ _('Active') }}
+        {% elif troika.phase == 'pending' %}
+          {{  _('Pending') }}
+        {% elif troika.phase == 'pending_huddle' %}
+          {{ _('Pending, huddle in progress') }}
+        {% elif troika.phase == 'complete' %}
+          {{ _('Complete') }}
+        {% endif %}
         <h3>{{ _('Start time') }}</h3> {{ troika.start_time }}
         <h3>{{ _('End time') }}</h3> {{ troika.end_time }}
         <h3>{{ _('Address') }}</h3> {{ troika.address }}
@@ -41,7 +51,7 @@
     <div class="span4 tl-group">
       <div class="span12">
         <h3>{{ _('Lead') }}</h3> 
-        {% if (troika.lead == _('No one yet') and 'email' in session and not troika.participating) %}
+        {% if (troika.lead == None and 'email' in session and not troika.participating) %}
           <a href="{{ url_for('join_troika', troika_id=troika.id, troika_role=0) }}">
           {{ _('Lead this Troika') }}
           </a><br/>
@@ -50,15 +60,19 @@
                                       heading_text=_('Give the email address of the person you want to invite to lead.')) %}
           {% endcall %}          
         {% else %}
-          {{ troika.lead }}
-          {% if (troika.phase not in [_('Active'), _('Complete')] and troika.participating == 'lead') %}
+          {% if (troika.lead == None) %}
+            {{ _('No one yet') }}
+          {% else %}
+            {{ troika.lead }}
+          {% endif %}
+          {% if (troika.phase not in ['active', 'complete'] and troika.participating == 'lead') %}
             <a href="{{ url_for('leave_troika', troika_id=troika.id, troika_role=0) }}">
             {{ _('Leave this Troika') }}
             </a>
           {% endif %}
         {% endif %}
         <h3>{{ _('First Learner') }}</h3>
-        {% if (troika.first_learner == _('No one yet') and 'email' in session and not troika.participating) %}
+        {% if (troika.first_learner == None and 'email' in session and not troika.participating) %}
           <a href="{{ url_for('join_troika', troika_id=troika.id, troika_role=1) }}">
           {{ _('Be the first learner in this Troika') }}
           </a><br/>          
@@ -67,15 +81,19 @@
                                       heading_text=_('Give the email address of the person you want to invite to be the first learner.')) %}
           {% endcall %}
         {% else %}
-          {{ troika.first_learner }}
-          {% if (troika.phase not in [_('Active'), _('Complete')] and troika.participating == 'first_learner') %}
+          {% if (troika.first_learner == None) %}
+            {{ _('No one yet') }}
+          {% else %}
+            {{ troika.first_learner }}
+          {% endif %}
+          {% if (troika.phase not in ['active', 'complete'] and troika.participating == 'first_learner') %}
             <a href="{{ url_for('leave_troika', troika_id=troika.id, troika_role=1) }}">
             {{ _('Leave this Troika') }}
             </a>
           {% endif %}
         {% endif %}
         <h3>{{ _('Second Learner') }}</h3> 
-        {% if (troika.second_learner == _('No one yet') and 'email' in session and not troika.participating) %}
+        {% if (troika.second_learner == None and 'email' in session and not troika.participating) %}
           <a href="{{ url_for('join_troika', troika_id=troika.id, troika_role=2) }}">
           {{ _('Be the second learner in this Troika') }}
           </a><br/>          
@@ -84,8 +102,12 @@
                                       heading_text=_('Give the email address of the person you want to invite to be the second learner.')) %}
           {% endcall %}
         {% else %}
-          {{ troika.second_learner }}
-          {% if (troika.phase not in [_('Active'), _('Complete')] and troika.participating == 'second_learner') %}
+          {% if (troika.second_learner == None) %}
+            {{ _('No one yet') }}
+          {% else %}
+            {{ troika.second_learner }}
+          {% endif %}
+          {% if (troika.phase not in ['active', 'complete'] and troika.participating == 'second_learner') %}
             <a href="{{ url_for('leave_troika', troika_id=troika.id, troika_role=2) }}">
             {{ _('Leave this Troika') }}
             </a>
@@ -101,16 +123,16 @@
             {% endif %}
             {% else %} {{ _('No one yet') }}
           {%endfor %}
-          {% if (troika.phase == _('Active') and 'email' in session and not troika.participating and not troika.is_full) %}
+          {% if (troika.phase == 'active' and 'email' in session and not troika.participating and not troika.is_full) %}
             <br/><a href="{{ url_for('join_troika', troika_id=troika.id, troika_role=3) }}">
             {{ _('Participate in this Troika') }}
             </a>
-          {% elif (troika.phase !=  _('Complete') and troika.participating == 'participant') %}
+          {% elif (troika.phase !=  'complete' and troika.participating == 'participant') %}
             <br/><a href="{{ url_for('leave_troika', troika_id=troika.id, troika_role=3) }}">
             {{ _('Leave this Troika') }}
             </a>
           {% endif %}
-          {% if (troika.phase ==  _('Active') and not troika.is_full) %}  
+          {% if (troika.phase ==  'active' and not troika.is_full) %}  
             <br/>{% call macros.invite_modal(inviteform=inviteform_participant, 
                                         link_text=_('Invite participant'), 
                                         heading_text=_('Give the email address of a person you want to invite to be participate in this Troika.')) %}
