Fixed invalid url to feedback form

--- a/org/troikalearning/troikalearning/templates/about.html
+++ b/org/troikalearning/troikalearning/templates/about.html
@@ -82,7 +82,7 @@
         <div class="page-header">
           <h3>{{ _('Contact us') }}</h3>
         </div>
-        <p><a href="mailto:info@troikalearning.org">{{ _('Give instant feedback about Troika') }}</a>.
+        <p><a href="{{ url_for('feedback') }}">{{ _('Give instant feedback about Troika') }}</a>.
         </p>
         <p>{{ _('For general questions about Troika, send email to') }}
           <a href="mailto:info@troikalearning.org">info@troikalearning.org</a>.</p>
