Automatically activate Troika when all needed information is set. i18n fixes.

--- a/org/troikalearning/troikalearning/templates/about.html
+++ b/org/troikalearning/troikalearning/templates/about.html
@@ -52,7 +52,7 @@
           <li>{{ _('Meet People.') }} <span>{{ _('When you and two other people have found each other in a Troika event, 
           you will receive email from us containing the email addresses of the three of you. If all the details were given 
           by the Troika creator, the Troika is now activated. If not, this is the time to agree on the remaining details and 
-          then activate the Troika event by pressing "Activate Troika" on the Troika page. After that other people will be 
+          then add that information to the Troika event by pressing "Edit Troika" on the Troika page. After that other people will be 
           able to join your Troika, limited of course by the maximum number of participants you have specified.') }}</span></li>
           <li>{{ _('Learn Stuff.') }} <span>{{ _('Enjoy your Troika event and learn things from each other! Finally 
           remember to spread the word about your Troika event for others to be encouraged and set 
